// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CommentCard snapshots > matches snapshot for block scope anchor 1`] = `
<div
  class="card "
  data-card-comment-id="c1"
  tabindex="0"
>
  <div
    class="cardHeader "
  >
    <span
      class="author"
    >
      alice
    </span>
    <span
      class="typeBadge badgeQuestion"
    >
      question
    </span>
    <span
      class="time"
    >
      5d ago
    </span>
  </div>
  <div
    class="anchorExcerpt"
    role="button"
    tabindex="0"
  >
    <span
      class="anchorScopeIcon"
    >
      ¶
    </span>
     
    This is a code block
  </div>
  <div
    class="commentBody commentBodyTruncated"
  >
    <p>
      What does this mean?
    </p>
  </div>
  <div
    class="cardFooter"
  >
    <button
      aria-label="Reply"
      class="footerButton"
      title="Reply"
      type="button"
    >
      <svg
        class="lucide lucide-reply"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 17 4 12 9 7"
        />
        <path
          d="M20 18v-2a4 4 0 0 0-4-4H4"
        />
      </svg>
    </button>
    <button
      aria-label="Edit"
      class="footerButton"
      title="Edit"
      type="button"
    >
      <svg
        class="lucide lucide-pencil"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
        />
        <path
          d="m15 5 4 4"
        />
      </svg>
    </button>
    <button
      aria-label="Resolve"
      class="footerButton"
      title="Resolve"
      type="button"
    >
      <svg
        class="lucide lucide-check"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </button>
    <button
      aria-label="Delete comment"
      class="deleteButton"
      type="button"
    >
      <svg
        class="lucide lucide-trash2"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 6h18"
        />
        <path
          d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
        />
        <path
          d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`CommentCard snapshots > matches snapshot for collapsed resolved comment 1`] = `
<div
  class="card cardResolved cardResolvedCollapsed"
  data-card-comment-id="c1"
  role="button"
  tabindex="0"
>
  <div
    class="resolvedSummary"
  >
    <span
      class="author"
    >
      alice
    </span>
    <span
      class="typeBadge badgeQuestion"
    >
      question
    </span>
    <span
      class="time"
    >
      resolved
    </span>
  </div>
  <div
    class="resolvedPreview"
  >
    What does this mean?
  </div>
</div>
`;

exports[`CommentCard snapshots > matches snapshot for document scope anchor 1`] = `
<div
  class="card "
  data-card-comment-id="c1"
  tabindex="0"
>
  <div
    class="cardHeader "
  >
    <span
      class="author"
    >
      alice
    </span>
    <span
      class="typeBadge badgeQuestion"
    >
      question
    </span>
    <span
      class="time"
    >
      5d ago
    </span>
  </div>
  <div
    class="anchorExcerpt anchorDocument"
  >
    Entire document
  </div>
  <div
    class="commentBody commentBodyTruncated"
  >
    <p>
      What does this mean?
    </p>
  </div>
  <div
    class="cardFooter"
  >
    <button
      aria-label="Reply"
      class="footerButton"
      title="Reply"
      type="button"
    >
      <svg
        class="lucide lucide-reply"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 17 4 12 9 7"
        />
        <path
          d="M20 18v-2a4 4 0 0 0-4-4H4"
        />
      </svg>
    </button>
    <button
      aria-label="Edit"
      class="footerButton"
      title="Edit"
      type="button"
    >
      <svg
        class="lucide lucide-pencil"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
        />
        <path
          d="m15 5 4 4"
        />
      </svg>
    </button>
    <button
      aria-label="Resolve"
      class="footerButton"
      title="Resolve"
      type="button"
    >
      <svg
        class="lucide lucide-check"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </button>
    <button
      aria-label="Delete comment"
      class="deleteButton"
      type="button"
    >
      <svg
        class="lucide lucide-trash2"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 6h18"
        />
        <path
          d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
        />
        <path
          d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`CommentCard snapshots > matches snapshot for open comment with replies 1`] = `
<div
  class="card "
  data-card-comment-id="c1"
  tabindex="0"
>
  <div
    class="cardHeader "
  >
    <span
      class="author"
    >
      alice
    </span>
    <span
      class="typeBadge badgeQuestion"
    >
      question
    </span>
    <span
      class="time"
    >
      5d ago
    </span>
  </div>
  <div
    class="anchorExcerpt"
    role="button"
    tabindex="0"
  >
    "selected text"
  </div>
  <div
    class="commentBody commentBodyTruncated"
  >
    <p>
      What does this mean?
    </p>
  </div>
  <div
    class="repliesSection"
  >
    <button
      class="repliesToggle"
      type="button"
    >
      <svg
        class="lucide lucide-chevron-right"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
      2
       
      replies
    </button>
  </div>
  <div
    class="cardFooter"
  >
    <button
      aria-label="Reply"
      class="footerButton"
      title="Reply"
      type="button"
    >
      <svg
        class="lucide lucide-reply"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 17 4 12 9 7"
        />
        <path
          d="M20 18v-2a4 4 0 0 0-4-4H4"
        />
      </svg>
    </button>
    <button
      aria-label="Edit"
      class="footerButton"
      title="Edit"
      type="button"
    >
      <svg
        class="lucide lucide-pencil"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
        />
        <path
          d="m15 5 4 4"
        />
      </svg>
    </button>
    <button
      aria-label="Resolve"
      class="footerButton"
      title="Resolve"
      type="button"
    >
      <svg
        class="lucide lucide-check"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </button>
    <button
      aria-label="Delete comment"
      class="deleteButton"
      type="button"
    >
      <svg
        class="lucide lucide-trash2"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 6h18"
        />
        <path
          d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
        />
        <path
          d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`CommentCard snapshots > matches snapshot for open comment with text anchor 1`] = `
<div
  class="card "
  data-card-comment-id="c1"
  tabindex="0"
>
  <div
    class="cardHeader "
  >
    <span
      class="author"
    >
      alice
    </span>
    <span
      class="typeBadge badgeQuestion"
    >
      question
    </span>
    <span
      class="time"
    >
      5d ago
    </span>
  </div>
  <div
    class="anchorExcerpt"
    role="button"
    tabindex="0"
  >
    "selected text"
  </div>
  <div
    class="commentBody commentBodyTruncated"
  >
    <p>
      What does this mean?
    </p>
  </div>
  <div
    class="cardFooter"
  >
    <button
      aria-label="Reply"
      class="footerButton"
      title="Reply"
      type="button"
    >
      <svg
        class="lucide lucide-reply"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 17 4 12 9 7"
        />
        <path
          d="M20 18v-2a4 4 0 0 0-4-4H4"
        />
      </svg>
    </button>
    <button
      aria-label="Edit"
      class="footerButton"
      title="Edit"
      type="button"
    >
      <svg
        class="lucide lucide-pencil"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
        />
        <path
          d="m15 5 4 4"
        />
      </svg>
    </button>
    <button
      aria-label="Resolve"
      class="footerButton"
      title="Resolve"
      type="button"
    >
      <svg
        class="lucide lucide-check"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </button>
    <button
      aria-label="Delete comment"
      class="deleteButton"
      type="button"
    >
      <svg
        class="lucide lucide-trash2"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 6h18"
        />
        <path
          d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
        />
        <path
          d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </button>
  </div>
</div>
`;
